--- a/index.html
+++ b/index.html
@@ -36,21 +36,35 @@
         </div>
         </div>
     </nav>
+    <!-- <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="images/IMG-20211027-WA0000.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/IMG-20211027-WA0001.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="images/IMG-20211027-WA0003.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+    </div> -->
        <div class="container">
            <div class="row">
             <div class="container-two">
-                <div  class="col-md-6 float-start">
-                    <h1>World's Trusted Cryto-Currency Investment Platform</h1>
-                    <p>In Partnership with Coinbase, Okex, Binance And Lots more.. Sponsor of thousands of digital assets giveaways worldwide
-                    </p>
+                <div  class="col-md-12 float-start">
+                    <h1>World's Trusted Cryto-Currency Giveaway Platform.</h1>
+                    <h1 style="font-weight: bold; color: rgb(255, 31, 255);"> Coinbonus Exchange</h1>
+                    <h5>In Partnership with Coinbase, Okex, Binance And Lots more.. Sponsor of thousands of digital assets giveaways worldwide
+                    </h5>
                 </div>
-                  <form class="col-md-5 col-sm-12 details float-end p-5 ml-auto">
+                  <!-- <form class="col-md-5 col-sm-12 details float-end p-5 ml-auto">
                     <h3>Get Started</h3>
                     <h3> Your Email/Phone</h3>
                     <input type="text" placeholder="Email/Phone"> <br> <br>
-                    <a class="btn btn-sm btno p-3 " href="#" role="button "> Get Started </a>
-                  </form>
-                  <div><a class="btn btn-primary btn-sm p-3 au" href="#" role="button">  subscribe to our youtube channel</a></div>
+                    <a class="btn btn-sm btno p-3 " href="started.html" role="button "> Get Started </a>
+                  </form> -->
+                  <div><a class="btn btn-primary btn-sm p-3 au" href="#" role="button">  subscribe to our Telegram channel</a></div>
                 </div>
            </div>
        </div>
@@ -65,6 +79,7 @@
         <div class="container">
         <div class="row">
         <div class="container-four">
+          <h1 style="text-align: center; font-weight: bold; color: rgb(255, 19, 255);">What Crypto-Currency Can i Earn?</h1>
             <div class="col-md-6 fourone">
              <span style="font-size: 30px; opacity: 0.7; font-weight: bolder;"> The world's only innovation payment solution</span> <br>
       <span style="font-size: 30px;font-weight: bold; color: rgb(199, 202, 0);">GIVING OUT DIFFERENT CRYPTOCURRECY AND COINS TO ALL</span>
@@ -150,7 +165,7 @@
          <div class="container text-white">
            <div class="row">
              <div class="col-md-4 p-2">
-                <span style="font-weight: bold;"> Copyright © 2021 trx-bonus INC.</span>
+                <span style="font-weight: bold;"> Copyright © 2021 coin-base INC.</span>
              </div>
              <div class="col-md-4 p-2">
                <ul class="list-unstyled">
