--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar sticky-top navbar-expand-sm navbar-light nav">
         <div class="container-fluid container-one">
-            <a class="navbar-brand" href="#" style="font-size: 2rem; font-weight: bold; margin-left: 4rem;color: white;">Coinbonus Exchange</a>
+            <a class="navbar-brand" href="#" style="font-size: 2rem; font-weight: bold; margin-left: 4rem;color: white;">Coinbonus</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarID"
                 aria-controls="navbarID" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
